# AutoML

./: .gitignore
doc/: how-to-contribute.md  software_code.py
frontend/: automl-frontend.Dockerfile  deploy_automl_frontend.yaml  nginx.conf  op.sh  op2.sh
java/modelserver/: Dockerfile  automl-pv-pvc.yaml  deployment-app.yaml  op.sh  pom.xml
java/modelserver/src/main/java/com/bdilab/automl/: DeploymentApplication.java
java/modelserver/src/main/java/com/bdilab/automl/controller/: ExperimentController.java  MonitorController.java
java/modelserver/src/main/java/com/bdilab/automl/dto/: InferenceServiceInfo.java  (+1 more)
java/modelserver/src/main/resources/: application-dev.yaml  application.yaml
java/modelserver/src/test/java/: TestAll.java  WebSocketClient.java  WebSocketLT.java
python/: README.md  automl-deployment.yaml  automl-pv-pvc.yaml  automl.Dockerfile  autotrain.Dockerfile  op.sh
python/automl/: README.md  pyproject.toml
python/automl/alserver/: __init__.py  __main__.py  errors.py  server.py  settings.py
python/automl/alserver/codecs/: string.py
python/automl/alserver/cruds/: experiment.py
python/automl/alserver/databases/: __init__.py
python/automl/alserver/databases/mysql/: __init__.py  server.py
python/automl/alserver/handlers/: __init__.py  dataplane.py
python/automl/alserver/models/: base.py  experiment.py
python/automl/alserver/operators/: __init__.py  training_client.py  utils.py
python/automl/alserver/rest/: __init__.py  app.py  endpoints.py  errors.py  requests.py  responses.py  server.py  settings.py
python/automl/alserver/schemas/: __init__.py  input_schema.py  output_schema.py
python/automl/alserver/utils/: config  dataplane_utils.py  logging.py
python/automl/autoschedule/: __init__.py  host_info.json
python/automl/autoschedule/monitor/: __init__.py  monitoring.py  resource_monitor.py  scheduler_utils.py
python/automl/autoselect/: .env  __init__.py
python/automl/autoselect/resources/: automl-models-metadata-zh.jsonl  automl-models-metadata.jsonl
python/automl/autoselect/resources/prompt-templates/: model-selection-prompt-v1.json  model-selection-prompt-v2.json  model-selection-prompt-zh.json  model-selection-response-prompt-v1.json  parse-selection-example-prompt.json  parse-selection-examples copy.json  parse-selection-examples.json
python/automl/autoselect/selection/: __init__.py  llm_factory.py  model_selection.py  settings.py
python/automl/autoselect/utils/: logging.py
python/automl/autotrain/: __init__.py
python/automl/autotrain/examples/image_data/: run.sh  run_resnet.py
python/automl/autotrain/examples/structured_data/: run.sh  run_densenet.py
python/automl/autotrain/trainers/: __init__.py
python/automl/autotrain/trainers/auto/: __init__.py  auto_factory.py  configuration_auto.py  feature_extraction_auto.py  train_func_auto.py  trainer_auto.py
python/automl/autotrain/trainers/convnet/: __init__.py  configuration_convnet.py  train_func_convnet.py  trainer_ak_convnet.py
python/automl/autotrain/trainers/densenet/: __init__.py  configuration_densenet.py  feature_extraction_densenet.py  train_func_densenet.py  trainer_ak_densenet.py
python/automl/autotrain/trainers/resnet/: __init__.py  configuration_resnet.py  train_func_resnet.py  trainer_ak_resnet.py
python/automl/autotrain/trainers/xception/: __init__.py  configuration_xception.py  train_func_xception.py  trainer_ak_xception.py
python/automl/autotrain/trainers/yolov8/: __init__.py  configuration_yolov8.py  train_func_yolov8.py  trainer_yolov8.py
python/automl/autotrain/utils/: __init__.py  auto_argparser.py  configuration_utils.py  feature_extraction_utils.py  generic_utils.py  hub.py  logging.py  minio_client_utils.py  numpy.py  storage.py  trainer_utils.py
python/automl/tests/: learning.ipynb  t.json  test_auto_argparser.py  test_auto_train.py  test_dataplane.py  test_feature_extraction.py  test_minio.py  test_model_selection.py  test_monitor.py  test_mysql_server.py  test_train_func.py  test_websocket.py
python/modelserver/: image-classification.Dockerfile
python/modelserver/autokeras_server/: autokeras-server-test.yaml  autokeras.Dockerfile  pyproject.toml  requirements.txt
python/modelserver/autokeras_server/autokeras_server/: __main__.py  model.py  model_repository.py
python/modelserver/data_classifier_server/data_classifier_server/: __main__.py  dc_model_repository.py  model.py
python/modelserver/data_regression_sever/data_regression_sever/: __main__.py  dr_model_repository.py  model.py
python/modelserver/huggingface_server/: README.md  pyproject.toml
python/modelserver/huggingface_server/huggingface_server/: common.py  errors.py  metadata.py  runtime.py  settings.py
python/modelserver/huggingface_server/huggingface_server/codecs/: base.py
python/modelserver/image_classification_server/: README.md
python/modelserver/image_classification_server/image_classification_server/: __init__.py  __main__.py  ic_model_repository.py  model.py
python/modelserver/tserve/: README.md  pyproject.toml  re.txt
python/modelserver/tserve/test/: __main__.py  custom_model.py  custom_model_repository.py  test.ipynb
python/modelserver/tserve/test/storage/: test_storage.py  test_trainer_save.py
python/modelserver/tserve/test/storage/output/test/: all_results.json  config.json  eval_results.json
python/modelserver/tserve/tserve/: __init__.py  errors.py  exceptions.py  model.py  model_repository.py  model_server.py  rest.py  settings.py
python/modelserver/tserve/tserve/codecs/: numpy.py
python/modelserver/tserve/tserve/protocol/: __init__.py  dataplane.py  infer_type.py
python/modelserver/tserve/tserve/protocol/rest/: endpoints.py  server.py
python/modelserver/tserve/tserve/storage/: storage.py
python/modelserver/tserve/tserve/types/: __init__.py  base.py  dataplane.py  model_repository.py
python/modelserver/tserve/tserve/utils/: logging.py  utils.py
python/modelserver/yolo_server/: pyproject.toml  requirements.txt  yolo.Dockerfile
python/modelserver/yolo_server/yolo_server/: __main__.py  model.py  model_repository.py
(+37 files in other folders)
