[tool.poetry]
name = "autokeras-server"
version = "0.1.0"
description = ""
authors = ["dcjsenior <dcjsenior1@gmail.com>"]
packages = [
    { include = "autokeras_server" },
]

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[tool.poetry.dependencies]
tserve = { path = "../tserve", develop = true }
python = ">=3.9,<3.12"
orjson = "^3.8.0"
numpy = "^1.23.5"
pandas = "2.0.1"
pyyaml = "^6.0.1"
pydot = "1.3.0"
autokeras = { version = "^1.1.0", source = "tsinghua" }
tensorflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
