[tool.poetry]
name = "tserve"
version = "0.0.1"
description = "TServe Python SDK"
authors = ["treasures"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "tserve" }
]

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
uvicorn = { version = "^0.19.0", extras = ["standard"] }
fastapi = "^0.95.0"
six = "^1.16.0"
python-dateutil = "^2.8.0"
numpy = "^1.23.5"
psutil = "^5.9.0"
grpcio = "^1.49.1"
orjson = "^3.8.0"
httpx = "^0.23.0"
pandas = ">=1.3.5"
cloudevents = "^1.6.2"

# Storage dependencies. They can be opted into by apps.
urllib3 = { version = "^1.26.8", optional = true }
requests = { version = "^2.20.0", optional = true }
google-cloud-storage = { version = "^1.20.0", optional = true }
azure-storage-blob = { version = "^12.10.0", optional = true }
azure-storage-file-share = { version = "^12.7.0", optional = true }
azure-identity = { version = "^1.8.0", optional = true }
boto3 = { version = "^1.21.0", optional = true }
minio = "^7.1.17"

[tool.poetry.extras]
storage = [
    "urllib3",
    "requests",
    "google-cloud-storage",
    "azure-storage-blob",
    "azure-storage-file-share",
    "azure-identity",
    "boto3",
]

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"